# registrypol

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
registrypol/: __init__.py  policy.py  values.py
tests/: test_policy.py  test_utils.py  test_values.py
tests/files/: registry.pol
