[project]
name = "registrypol"
version = "1.0.1"
description = "Windows Registry Policy parser and emitter for Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff~=0.0",
    "ty~=0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
